--- a/web_app/index.html
+++ b/web_app/index.html
@@ -51,14 +51,12 @@
     <input type="button" id="values" value="Values" onclick="submitFormValues()">
     <input type="button" id="inflexions" value="Inflexions" onclick="submitFormInflexions()">
     <input type="button" id="all" value="Values/Inflexions" onclick="submitFormAll()">
-    <input type="button" id="stats" value="Stats" onclick="submitFormStats()">
-    <input type="button" id="activity" value="Activity" onclick="submitFormActivity()">
+    <input type="button" id="analytics" value="Print analytics" onclick="submitAnalytics()">
 </form>
 
 <div id="chartdiv1" class="chartdiv"></div>
 <div id="chartdiv2" class="chartdiv"></div>
-<div id="chartdiv3" class="chartdiv"></div>
-<div id="chartdiv4" class="chartdiv"></div>
+<div id="statsdiv" class="chartdiv"></div>
 <script>
     var select = document.getElementById("sensorsList");
     var sensors = getSensors().sort();
