--- a/web_app/index.html
+++ b/web_app/index.html
@@ -48,6 +48,11 @@
     <input type="datetime" name="begin" id="begin" placeholder="Begin">
     <input type="datetime" name="end" id="end" placeholder="End">
     <select id="sensorsList"></select>
+    <select id="server">
+        <option value="kloud4" selected="selected">Serveur XP</option>
+        <option value="kloud5">Serveur Temoin</option>
+        <option value="localhost">localhost</option>
+    </select>
     <input type="button" id="values" value="Values" onclick="submitFormValues()">
     <input type="button" id="inflexions" value="Inflexions" onclick="submitFormInflexions()">
     <input type="button" id="all" value="Values/Inflexions" onclick="submitFormAll()">
