fixing several issues

--- a/web_app/index.html
+++ b/web_app/index.html
@@ -49,9 +49,9 @@
     <input type="datetime" name="end" id="end" placeholder="End">
     <select id="sensorsList"></select>
     <select id="server">
-        <option value="kloud4" selected="selected">Serveur XP</option>
+        <option value="kloud4" >Serveur XP</option>
         <option value="kloud5">Serveur Temoin</option>
-        <option value="localhost">localhost</option>
+        <option value="localhost" selected="selected">localhost</option>
     </select>
     <input type="button" id="values" value="Values" onclick="submitFormValues()">
     <input type="button" id="inflexions" value="Inflexions" onclick="submitFormInflexions()">
